--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,25 @@
     width: 100%;
     height: 100%;
 }
+
+.nav {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #ccc;
+}
+
+.link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    color: #333;
+    text-decoration: none;
+    font-size: 18px;
+    font-family: serif;
+}
+
+.link.active {
+    color: steelblue;
+}
